name:                lets-haskell
version:             0.1.0.0
synopsis:            Source code for an introductory Haskell course
description:         Source code and exercises for an introductory course on Haskell and functional programming.
homepage:            http://github.com/peterson/lets-haskell
license:             BSD3
license-file:        LICENSE
author:              David Peterson
maintainer:          dhpeterson@gmail.com
copyright:           Copyright 2015 David Peterson.
category:            Education
build-type:          Custom
-- extra-source-files:
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            git://github.com/peterson/lets-haskell.git


library
  exposed-modules:     Lets.Cellular,
                       Lets.Comonad,
                       Lets.Data,
                       Lets.Function,
                       Lets.Functor,
                       Lets.Go,
                       Lets.IORef,
                       Lets.List,
                       Lets.MVar,
                       Lets.State.MVar,
                       Lets.State.StateT,
                       Lets.STM,
                       Lets.TouchyFeelyFuzzy
                       Lets.TupleLens
  -- other-modules:
  -- other-extensions:
  build-depends:       base >= 4.8 && < 4.9,
                       mtl >= 2.2 && < 2.3,
                       primes >= 0.2 && < 0.3,
                       time >= 1.5 && < 1.6,
                       QuickCheck >= 2.0 && < 3.0

  hs-source-dirs:      src
  default-language:    Haskell2010


test-suite tests
  type:                exitcode-stdio-1.0

  build-depends:       base >= 4.8 && < 4.9,
                       QuickCheck >= 2.0,
                       test-framework >= 0.4,
                       test-framework-quickcheck2 >= 0.2,
                       lets-haskell

  hs-source-dirs:      tests
  ghc-options:         -Wall -threaded
  main-is:             Main.hs
  default-language:    Haskell2010
